# opencanopy

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  CLAUDE.md  CONTRIBUTING.md  README.md  tabletop_pepper_grower_v1_spec_v1_1.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  firmware.yml  hardware.yml  mechanical.yml
.github/workflows/: ci.yml  docs.yml
LICENSES/: README.md
docs/: ECO-003-v1-redesign.md  README.md  cad_brief_for_claude.md  dli-targets.md  electronics-design.md  fastening.md  firmware-api.md  mechanical-build.md  nutrient-ph-ec-guidance.md  plant-profile-hot-pepper.md  product-requirements.md  references.md  risk-register.md  scope.md  vpd-climate-model.md  watering-model.md
docs/assets/models/: opencanopy-v1.glb
electronics/: README.md
electronics/analysis/: ECO-001-fan-removal.md  ECO-002-pcb-toolchain.md  WI-EE-01-component-poc.md  WI-EE-03-schematic.md  WI-EE-04-pcb-layout.md  WI-EE-09-status-led-board.md  WI-EE-10-thermal-budget-model.md  design-rules.md  pin-map.csv  power-budget.csv  power-budget.md  thermal_budget_model.py  trace_width.py
electronics/bom/: alternates.csv  bom.csv  component-sourcing.md
electronics/pcb/3d-models/: README.md  WS2812B-2020_C965555.wrl
electronics/pcb/fabrication/: fab-notes.md
electronics/pcb/kicad/: README.md
electronics/pcb/netlist/: README.md  controller-netlist.csv  controller.net  controller_netlist.py
electronics/pcb/programmatic/: README.md  build.sh  controller.circuit.tsx  gen_tscircuit.py  render.sh
electronics/test/: bringup.md  hil-fixture.md  pcb-verification.md
electronics/test/poc-logs/: poc-log-template.csv
electronics/wiring/: README.md  connector-spec.md  harness-table.csv
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/control/: Cargo.toml
firmware/control/src/: app_state.rs  board.rs  calibration.rs  climate_controller.rs  hal.rs  i2c_devices.rs  irrigation_controller.rs  led_status.rs  lib.rs  light_controller.rs  logging.rs  math.rs  moisture_monitor.rs  plant_profile.rs  safety_controller.rs  scheduler.rs  testkit.rs
firmware/control/tests/: hal_integration.rs
firmware/controller/: Cargo.toml  README.md  rust-toolchain.toml
firmware/controller/.cargo/: config.toml
firmware/controller/src/: emulator.rs  hw.rs  main.rs
firmware/controller/src/actuators/: mod.rs
firmware/controller/src/drivers/: mod.rs
firmware/controller/src/sensors/: mod.rs
firmware/controller/wokwi/: README.md  diagram.json  scenario.yaml  wokwi.toml
firmware/hil/: README.md
firmware/sim/: Cargo.toml  README.md
firmware/sim/models/: README.md
firmware/sim/scenarios/: README.md
firmware/sim/src/: lib.rs  models.rs
firmware/sim/tests/: scenarios.rs
mechanical/: README.md  alpha-build.md  bom-mechanical.csv  cad-verification-checklist.md  fit-tests.md  print-settings.md  tolerance-analysis.md
mechanical/cad/: audit.py  opencanopy_tabletop_pepper_v1_block_model.scad  physics_sim.py  render_block.py
mechanical/cad/exports/: opencanopy_v0.stl
mechanical/cad/source/: README.md  build.py  collision_check.py  drawings.py  render.py  verify.py
mechanical/cad/step/: cable-channel.step  cable-clip.step  coupon-cable-channel-clip.step  coupon-diffuser-slot.step  coupon-heatset-insert.step  coupon-reservoir-rail.step  coupon-screw-boss.step  coupon-snap-fit.step  coupon-tube-clip.step  electronics-dry-bay-lid.step  electronics-dry-bay.step  fan-mount.step  frame.step  leak-tray.step  led-fixture.step  light-mount.step  opencanopy-assembly.step  pot-10L.step  pot-tray.step  pump-clip.step  reservoir-4L.step  sensor-clip.step  status-diffuser.step  tube-clip.step
mechanical/drawings/: README.md
mechanical/stl/: README.md
mechanical/stl/assembly/: cable-channel.stl  electronics-dry-bay-lid.stl  electronics-dry-bay.stl  fan-mount.stl  frame.stl  leak-tray.stl  led-fixture.stl  light-mount.stl  pot-tray.stl  pot.stl  pump-clip.stl  reservoir.stl  status-diffuser.stl
mechanical/stl/printable/: cable-channel.stl  cable-clip.stl  electronics-dry-bay-lid.stl  electronics-dry-bay.stl  fan-mount.stl  leak-tray.stl  light-mount.stl  pot-tray.stl  pump-clip.stl  sensor-clip.stl  status-diffuser.stl  tube-clip.stl
mechanical/stl/prototypes/: coupon-cable-channel-clip.stl  coupon-diffuser-slot.stl  coupon-heatset-insert.stl  coupon-reservoir-rail.stl  coupon-screw-boss.stl  coupon-snap-fit.stl  coupon-tube-clip.stl
plan/: IGNITION.md  tabletop_pepper_grower_v1_spec_v1_1.md
plan/work-items/00-project-setup/: WI-PS-04-requirements-scope-lock.md
plan/work-items/01-plant-science/: WI-PL-01-lifecycle-profile.md  WI-PL-02-light-dli-targets.md  WI-PL-03-watering-model.md  WI-PL-04-vpd-climate-model.md  (+2 more)
scripts/: README.md  bom_check.py  dli_calculator.py  stl_check.py
validation/: README.md
work-items/: README.md
work-items/00-project-setup/: WI-PS-01-repo-skeleton.md  WI-PS-02-licensing.md  WI-PS-03-issue-templates.md  WI-PS-04-requirements-scope-lock.md  WI-PS-05-risk-register.md  WI-PS-06-ci-pipeline.md
work-items/01-plant-science/: WI-PL-02-light-dli-targets.md  WI-PL-04-vpd-climate-model.md  WI-PL-06-photometric-model.md
work-items/02-firmware/: WI-FW-01-project-build.md  WI-FW-02-hal-mocks.md  WI-FW-03-plant-profile.md  WI-FW-04-light-controller.md  WI-FW-06-climate-controller.md  WI-FW-07-safety-state-machine.md  WI-FW-09-simulator.md  WI-FW-10-logging-connectivity.md  WI-FW-11-calibration-storage.md
work-items/03-electronics/: WI-EE-01-component-poc.md  WI-EE-02-power-budget.md  WI-EE-03-schematic.md  WI-EE-04-pcb-layout.md  WI-EE-05-harness-pinout.md  WI-EE-07-fabrication-package.md  WI-EE-08-bringup-hil.md  WI-EE-09-status-led-board.md  WI-EE-10-thermal-budget-model.md
work-items/04-mechanical/: WI-ME-07-cable-tube-routing.md
work-items/05-validation-qa/: WI-QA-03-thermal.md  WI-QA-07-grow-trial.md  WI-QA-08-electrical-safety.md  WI-QA-09-bench-characterization.md  WI-QA-10-surrogate-shakedown.md
work-items/06-documentation/: WI-DOC-04-calibration-operation.md
(+68 files in other folders)
