# On-target ESP32-S3 binary. This is a STANDALONE package (excluded from the host workspace) so the
# host unit/sim suite never needs to resolve esp-hal/esp-wifi. Build only with the Espressif Rust
# channel (espup) for `xtensa-esp32s3-none-elf`:
#
#   cd firmware/controller
#   cargo build --release            # target comes from controller/.cargo/config.toml
#   cargo run   --release            # flashes + monitors via espflash
#
# Versions below are indicative; pin exact versions when bringing up real hardware (WI-EE-08).
[package]
name = "controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "OpenCanopy ESP32-S3 firmware binary — binds control's hal.rs traits to esp-hal peripherals"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
control = { path = "../control" }

# `unstable` is required in esp-hal 0.23 for the entry macro, timers, Delay, etc.
esp-hal = { version = "0.23", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.15", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
# esp-println's output is a one-of feature group (jtag-serial | uart | auto); disable the default
# `auto` and pick `uart` explicitly so exactly one is enabled.
esp-println = { version = "0.13", default-features = false, features = ["esp32s3", "uart"] }
esp-storage = { version = "0.4", features = ["esp32s3"] }
embedded-storage = "0.3"
# Fixed-capacity Vec used by the calibration store binding (no alloc).
heapless = "0.8"

# Telemetry is optional and DEFAULT-OFF (§9.11): no control path may depend on it.
esp-wifi = { version = "0.12", features = ["esp32s3", "wifi"], optional = true }

[features]
default = []
# Wi-Fi/MQTT/Home-Assistant telemetry + optional NTP. Builds and runs without this (offline-first).
telemetry = ["dep:esp-wifi"]
# Mirror of control's transplant build flag (§5.1).
transplant_profile = ["control/transplant_profile"]
# Emulator smoke-test build: runs the real App + control loop on emulated silicon (Wokwi/QEMU)
# with synthesized sensors and serial telemetry, instead of touching real peripherals. See
# src/emulator.rs and controller/wokwi/.
emulator = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
